--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="description" content="Roamora - A high-performance and optimized web app experience.">
 
     <meta charset="UTF-8" />
-    <link rel="icon" href="img/roamora.webp" />
+    <link rel="icon" href="img/roamora1.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Roamora</title>
   </head>
